# dalle-st

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dalle/: app.py
